# rust-tokio-file-watch

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: error.rs  fs_watch.rs  lib.rs  serde_watch.rs
